--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -39,12 +39,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -56,12 +56,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -73,12 +73,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -90,12 +90,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -107,12 +107,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -124,12 +124,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -141,12 +141,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
@@ -158,12 +158,12 @@
         <h3>DEGREE TYPE</h3>
         <div class="degree-type">
           <div>
-            <div><span>$</span> Certificates </div>
-            <div><span>$</span> Associate of Applied Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
           </div>
           <div>
-            <div><span>$</span> Associate of Arts Degrees </div>
-            <div><span>$</span> Associate of Science Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
           </div>
         </div>
       </div>
