--- a/index.html
+++ b/index.html
@@ -11,163 +11,203 @@
   <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>CSS Grid System</title>
 </head>
 <body>
-<div class="container">
-    <a target="_blank" name="Accounting" href="https://www.dscc.edu/accounting" class="accounting specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-calculator"></i></div>
-        <h2>Accounting</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+  <!-- start navbar -->
+  <nav>
+    <div class="container">
+      <div class="logo">
+        <img src="Logo1.png" alt="logo">
+      </div>
+      <i class="fa fa-bars" id="open"></i>
+      <div class="link menue" id="menue">
+        <i class="fa fa-times" id="close"></i>
+        <ul>
+          <li><a href="https://www.dscc.edu/accounting">Accounting</a></li>
+          <li><a href="https://www.dscc.edu/business">Business</a></li>
+          <li><a href="https://www.dscc.edu/computer">Computer TE</a></li>
+          <li><a href="https://www.dscc.edu/justice">Justice</a></li>
+          <li><a href="https://www.dscc.edu/education">Education</a></li>
+          <li><a href="https://www.dscc.edu/ems">Medical</a></li>
+          <li><a href="https://www.dscc.edu/engineering">Engineering</a></li>
+          <li><a href="https://www.dscc.edu/node/10828">Healthcare TE</a></li>
+          <li><a href="https://www.dscc.edu/him">Health Management</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- end navbar -->
+  <!-- start main -->
+<main>
+  <div class="container">
+      <a target="_blank" name="Accounting" href="https://www.dscc.edu/accounting" class="accounting specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-calculator"></i></div>
+          <h2>Accounting</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
           </div>
         </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/business" class="business specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-briefcase"></i></div>
-        <h2>Business </h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/computer" class="co-in-te specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-computer"></i></div>
-        <h2>Computer Information Technology</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/business" class="business specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-briefcase"></i></div>
+          <h2>Business </h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
           </div>
         </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/justice" class="cr-ju specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-scale-balanced"></i></div>
-        <h2>Criminal Justice</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/education" class="ea-ch-ed specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-shapes"></i></div>
-        <h2>Early Childhood Education</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/computer" class="co-in-te specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-computer"></i></div>
+          <h2>Computer Information Technology</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
           </div>
         </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/ems" class="em-me-se specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-truck-medical"></i></div>
-        <h2>Emergency Medical Services</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/engineering" class="en-sy-te specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-microchip"></i></div>
-        <h2> Engineering Systems Technology</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/justice" class="cr-ju specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-scale-balanced"></i></div>
+          <h2>Criminal Justice</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
           </div>
         </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/node/10828" class="he-te specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-user-nurse"></i></div>
-        <h2>Healthcare Technician</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a target="_blank" href="https://www.dscc.edu/him" class="he-in-ma specialty">
-      <div>
-        <div class="icon"><i class="fa-solid fa-book-medical"></i></div>
-        <h2>Health Information Management</h2>
-        <h3>DEGREE TYPE</h3>
-        <div class="degree-type">
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
-          </div>
-          <div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
-            <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/education" class="ea-ch-ed specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-shapes"></i></div>
+          <h2>Early Childhood Education</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
           </div>
         </div>
-      </div>
-    </a>
-</div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/ems" class="em-me-se specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-truck-medical"></i></div>
+          <h2>Emergency Medical Services</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/engineering" class="en-sy-te specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-microchip"></i></div>
+          <h2> Engineering Systems Technology</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/node/10828" class="he-te specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-user-nurse"></i></div>
+          <h2>Healthcare Technician</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a target="_blank" href="https://www.dscc.edu/him" class="he-in-ma specialty">
+        <div>
+          <div class="icon"><i class="fa-solid fa-book-medical"></i></div>
+          <h2>Health Information Management</h2>
+          <h3>DEGREE TYPE</h3>
+          <div class="degree-type">
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Certificates </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Applied Science Degrees </div>
+            </div>
+            <div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Arts Degrees </div>
+              <div><span><i class="fa-solid fa-square-check"></i></span> Associate of Science Degrees </div>
+            </div>
+          </div>
+        </div>
+      </a>
+  </div>
+</main>
+  <!-- end main -->
+
+
+<!-- open snd close menue -->
+  <script>
+    let menue = document.getElementById("menue");
+    document.getElementById("open").onclick = () => {
+      menue.style.right = "0px"
+    }
+    document.getElementById("close").onclick = () => {
+      menue.style.right = "-300px"
+    }
+  </script>
 </body>
 </html>
